feat: Add favicon and update HTML to include favicon links

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,10 @@
     <meta property="og:title" content="Shani Prajapati Portfolio" />
     <meta property="og:description" content="Full-stack developer crafting digital experiences that hit different. Code meets creativity meets chaos." />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="alternate icon" href="/favicon.ico" />
+
     <link rel="canonical" href="/" />
   </head>
 
